--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,35 @@
 
 }
 
-.body {
-    display: flex;
+body {
+    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1rem;
     height: 100vh;
+    display: flex;
+  }
+
+.bckgnd-img-container {
+    position: relative;
+    height: 100%;
 }
 
-img {
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 35%;
+    height: 12%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .50);
+}
+
+img.logo {
+    height: 90%;
+    width: auto;
+}
+
+.bckgnd-img {
     height: 100%;
     width: auto;
 }
@@ -20,6 +43,10 @@ img {
 .main-content,
 .btn-container {
     background-color: rgb(229, 229, 229);
+}
+
+.bold {
+    font-weight: 600;
 }
 
 form {
@@ -42,4 +69,8 @@ form > * {
 label,
 input {
     display: block;
+}
+
+label {
+    font-size: 0.75rem;
 }
