--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 :root {
     --system-font-stack: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --green: rgb(94 128 38);
 }
 
 body {
@@ -74,17 +75,26 @@ form {
     background-color: white;
 }
 
+.header > *,
+.footer,
 form > * {
-    padding-left: 1rem;;
+    padding: 1rem 1rem 0 1rem;
 }
 
-.main-content > div {
-    padding-left: 1rem;
+.header > p + p,
+.user-inputs {
+    padding-bottom: 1rem;
 }
 
 .user-inputs {
     display: flex;
-    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+.user-inputs > div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
 }
 
 label,
@@ -94,4 +104,22 @@ input {
 
 label {
     font-size: 0.75rem;
+}
+
+p {
+    margin: 0;
+}
+
+button {
+    background-color: var(--green);
+    color: white;
+    font-weight: 700;
+    border: none;
+    padding: .75rem 1.75rem;
+    border-radius: 5px;
+}
+
+.green {
+    color: var(--green);
+    font-weight: 700;
 }
