--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,11 @@ body {
     font-size: 1rem;
     height: 100vh;
     display: flex;
-  }
+}
+
+.main-content {
+    width: 100%;
+}
 
 .bckgnd-img-container {
     position: relative;
@@ -98,11 +102,13 @@ form > * {
 }
 
 label {
+    display: block;
     font-size: 0.7rem;
 }
 
 p {
     margin: 0;
+    max-width: 45ch;
 }
 
 button {
